telefone em pagina social

--- a/intex.html
+++ b/intex.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto redes</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>ola mundo</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+
+        <section id="redes" >
+
+        </section>
+    </main>
 </body>
 </html>
