--- a/intex.html
+++ b/intex.html
@@ -15,6 +15,12 @@
         </section>
 
         <section id="redes" >
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
 
         </section>
     </main>
